--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -1,44 +1,38 @@
-name: Image Build
-
+name: Publish main-latest image
 on:
   push:
     branches:
       - main
 
-permissions:
-  contents: read
-  packages: write
-
 jobs:
-  image-build:
+  goreleaser:
     runs-on: ubuntu-latest
     permissions:
+      contents: write
       packages: write
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Log in to GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
 
-      - name: Registry Login
-        uses: docker/login-action@v2
+      - uses: actions/checkout@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
-      - name: Docker Metadata
-        id: metadata
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            ghcr.io/${{ github.repository }}
-          tags: |
-            type=sha
-            type=raw,value=latest,enable={{is_default_branch}}
+      - run: git fetch --force --tags
 
-      - name: Build+Push
-        uses: docker/build-push-action@v3
+      - uses: actions/setup-go@v4
         with:
-          context: .
-          push: true
-          tags: ${{ steps.metadata.outputs.tags }}
+          go-version-file: go.mod
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          distribution: goreleaser-pro
+          version: latest
+          args: release --nightly --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
