Add ability to specify extra  for the provider deployment
Signed-off-by: Tyler Auerbeck <tylerauerbeck@users.noreply.github.com>

--- a/chart/loadbalancer-provider-haproxy/templates/deployment.yaml
+++ b/chart/loadbalancer-provider-haproxy/templates/deployment.yaml
@@ -50,7 +50,10 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "common.names.fullname" . }}-config
-          {{- if .Values.provider.securityContext }}
+          {{- if .Values.provider.extraEnvFrom }}
+            {{- toYaml .Values.provider.extraEnvFrom | nindent 12 }}
+         {{- end }} 
+         {{- if .Values.provider.securityContext }}
           securityContext:
             {{- toYaml .Values.provider.securityContext | nindent 12 }}
           {{- end }}
