Be more specific current topics are change topics; use only a supergraph endpoint
Signed-off-by: Tyler Auerbeck <tylerauerbeck@users.noreply.github.com>

--- a/chart/loadbalancer-provider-haproxy/templates/deployment.yaml
+++ b/chart/loadbalancer-provider-haproxy/templates/deployment.yaml
@@ -61,8 +61,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - process
-          {{- range .Values.provider.events.topics }}
-            - --event-topics={{ . }}
+          {{- range .Values.provider.events.changeTopics }}
+            - --change-topics={{ . }}
           {{- end }}
           ports:
             - name: hc
