--- a/chart/loadbalancer-provider-haproxy/values.yaml
+++ b/chart/loadbalancer-provider-haproxy/values.yaml
@@ -44,7 +44,7 @@ provider:
       secretName: ""
       credsPath: "/creds"
     topicPrefix: "com.infratographer"
-    topics:
+    changeTopics:
       - "changes.*.lb"
       - "events.create.port"
 
