--- a/chart/loadbalancer-provider-haproxy/templates/deployment.yaml
+++ b/chart/loadbalancer-provider-haproxy/templates/deployment.yaml
@@ -64,6 +64,7 @@ spec:
           {{- range .Values.provider.events.changeTopics }}
             - --change-topics={{ . }}
           {{- end }}
+            - --event-locations={{ .Values.provider.events.location }}
           ports:
             - name: hc
               containerPort: {{ .Values.provider.healthCheckPort | default "8080" }}
