--- a/chart/loadbalancer-provider-haproxy/values.yaml
+++ b/chart/loadbalancer-provider-haproxy/values.yaml
@@ -49,7 +49,7 @@ provider:
       credsPath: "/creds"
     topicPrefix: "com.infratographer"
     changeTopics:
-      - "changes.*.load-balancer"
+      - "*.load-balancer"
       - "events.create.port"
     location: ""
 
