Uplift events to use new configuration
Signed-off-by: Tyler Auerbeck <tylerauerbeck@users.noreply.github.com>

--- a/chart/loadbalancer-provider-haproxy/templates/config.yaml
+++ b/chart/loadbalancer-provider-haproxy/templates/config.yaml
@@ -5,11 +5,11 @@ metadata:
   labels:
     {{- include "common.labels.standard" . | nindent 4 }}
 data:
-  LOADBALANCERPROVIDERHAPROXY_EVENTS_SUBSCRIBER_PREFIX: "{{ .Values.provider.events.topicPrefix }}"
-  LOADBALANCERPROVIDERHAPROXY_EVENTS_SUBSCRIBER_URL: "{{ .Values.provider.events.connectionURL }}"
-  LOADBALANCERPROVIDERHAPROXY_EVENTS_PUBLISHER_URL: "{{ .Values.provider.events.connectionURL }}"
-  LOADBALANCERPROVIDERHAPROXY_EVENTS_PUBLISHER_PREFIX: "{{ .Values.provider.events.topicPrefix }}"
-  LOADBALANCERPROVIDERHAPROXY_EVENTS_QUEUEGROUP: "{{ .Values.provider.events.queueGroup }}"
+  LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_SUBSCRIBEPREFIX: "{{ .Values.provider.events.topicPrefix }}"
+  LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_PUBLISHPREFIX: "{{ .Values.provider.events.topicPrefix }}"
+  LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_URL: "{{ .Values.provider.events.connectionURL }}"
+  LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_QUEUEGROUP: "{{ .Values.provider.events.queueGroup }}"
   LOADBALANCERPROVIDERHAPROXY_API_ENDPOINT: "{{ .Values.provider.api.endpoint }}"
+  LOADBALANCERPROVIDERHAPROXY_IPAM_ENDPOINT: "{{ .Values.provider.ipam.endpoint }}"
   LOADBALANCERPROVIDERHAPROXY_IPBLOCK: "{{ .Values.provider.ipBlock }}"
   LOADBALANCERPROVIDERHAPROXY_OIDC_CLIENT_ISSUER: "{{ .Values.provider.api.oidc.client.issuer }}"
