--- a/chart/loadbalancer-provider-haproxy/values.yaml
+++ b/chart/loadbalancer-provider-haproxy/values.yaml
@@ -29,8 +29,6 @@ provider:
   extraAnnotations: []
   extraEnvFrom: {}
   extraEnvVars: []
-  #    - name: LOADBALANCERPROVIDERHAPROXY_EVENTS_SUBSCRIBER_NATS_CREDSFILE
-  #      value: "/creds"
   resources: {}
   podSecurityContext: {}
   securityContext: {}
@@ -53,7 +51,25 @@ provider:
       - "*.load-balancer"
       - "events.create.port"
     location: ""
-
+  tracing:
+    # enabled is true if OpenTelemetry tracing should be enabled for load-balancer-operator
+    enabled: false
+    # environment is the OpenTelemetry tracing environment to use
+    environment: ""
+    # provider is the OpenTelemetry tracing provider to use
+    provider: stdout
+    jaeger:
+      # endpoint is the Jaeger collector to send traces to
+      endpoint: ""
+      # user is the user to use when authenticating against the Jaeger deployment
+      user: ""
+      # password is the password to use when authenticating against the Jaeger deployment
+      password: ""
+    otlp:
+      # endpoint is the OpenTelemetry Protocol (OTLP) collector endpoint to send traces to
+      endpoint: ""
+      # insecure is true if TLS should not be required when sending traces
+      insecure: false
 
 reloader:
   enabled: false
