--- a/chart/loadbalancer-provider-haproxy/values.yaml
+++ b/chart/loadbalancer-provider-haproxy/values.yaml
@@ -51,7 +51,7 @@ provider:
       - "*.load-balancer"
       - "events.create.port"
     location: ""
-    # amount of times to retry a failed message before discarding it
+    # amount of times to retry a failed message before discarding it. 0 means msg will always be nacked on failure to process
     maxMsgProcessAttempts: 0
   tracing:
     # enabled is true if OpenTelemetry tracing should be enabled for load-balancer-operator
