Max event msg processing (#26)
* support max event msg processing

Signed-off-by: Matt Siwiec <rizzza@users.noreply.github.com>

* server logging skipper for /livez, /readyz

Signed-off-by: Matt Siwiec <rizzza@users.noreply.github.com>

* prefix with events

Signed-off-by: Matt Siwiec <rizzza@users.noreply.github.com>

---------

Signed-off-by: Matt Siwiec <rizzza@users.noreply.github.com>

--- a/chart/loadbalancer-provider-haproxy/templates/config.yaml
+++ b/chart/loadbalancer-provider-haproxy/templates/config.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "common.labels.standard" . | nindent 4 }}
 data:
+  LOADBALANCERPROVIDERHAPROXY_EVENTS_MAX_MSG_PROCESS_ATTEMPTS: "{{ .Values.provider.events.maxMsgProcessAttempts }}"
   LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_SUBSCRIBEPREFIX: "{{ .Values.provider.events.topicPrefix }}"
   LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_PUBLISHPREFIX: "{{ .Values.provider.events.topicPrefix }}"
   LOADBALANCERPROVIDERHAPROXY_EVENTS_NATS_URL: "{{ .Values.provider.events.connectionURL }}"
