add metadata config to check state of the loadbalancer
Signed-off-by: Matt Siwiec <rizzza@users.noreply.github.com>

--- a/chart/loadbalancer-provider-haproxy/values.yaml
+++ b/chart/loadbalancer-provider-haproxy/values.yaml
@@ -53,6 +53,11 @@ provider:
     location: ""
     # amount of times to retry a failed message before discarding it. 0 means msg will always be nacked on failure to process
     maxMsgProcessAttempts: 0
+  metadata:
+    # statusNamespaceID is the metadata status namespace ID housing loadbalancer status
+    statusNamespaceID: ""
+    # endpoint metadata-api endpoint
+    endpoint: ""
   tracing:
     # enabled is true if OpenTelemetry tracing should be enabled for load-balancer-operator
     enabled: false
