--- a/chart/loadbalancer-provider-haproxy/templates/config.yaml
+++ b/chart/loadbalancer-provider-haproxy/templates/config.yaml
@@ -13,6 +13,8 @@ data:
   LOADBALANCERPROVIDERHAPROXY_API_ENDPOINT: "{{ .Values.provider.api.endpoint }}"
   LOADBALANCERPROVIDERHAPROXY_IPAM_ENDPOINT: "{{ .Values.provider.ipam.endpoint }}"
   LOADBALANCERPROVIDERHAPROXY_IPBLOCK: "{{ .Values.provider.ipBlock }}"
+  LOADBALANCERPROVIDERHAPROXY_METADATA_STATUS_NAMESPACE_ID: "{{ .Values.provider.metadata.statusNamespaceID }}"
+  LOADBALANCERPROVIDERHAPROXY_METADATA_ENDPOINT: "{{ .Values.provider.metadata.endpoint }}"
   LOADBALANCERPROVIDERHAPROXY_OIDC_CLIENT_ISSUER: "{{ .Values.provider.api.oidc.client.issuer }}"
 {{- if .Values.provider.tracing.enabled }}
   LOADBALANCERPROVIDERHAPROXY_TRACING_ENABLED: "{{ .Values.provider.tracing.enabled }}"
